// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallScaleMultiple> <BallScaleMultiple> Mount: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0.00s;
  -webkit-animation-delay: 0.00s;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<BallScaleMultiple
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
    <div />
  </div>
</BallScaleMultiple>
`;

exports[`<BallScaleMultiple> <BallScaleMultiple> Render: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0.00s;
  -webkit-animation-delay: 0.00s;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallScaleMultiple> <BallScaleMultiple> Shallow: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0.00s;
  -webkit-animation-delay: 0.00s;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;
